Change Pabst Blue Ribbon logo to dark black instead of gray
- Update brightness from 1.15 to 0.3 for darker black appearance
- Add contrast(1.5) for better definition
- Apply to all responsive breakpoints

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         .sponsor-logo[alt="Pabst Blue Ribbon"] {
             max-height: 120px;
-            filter: grayscale(100%) brightness(1.15) 
+            filter: grayscale(100%) brightness(0.3) contrast(1.5) 
                     drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                     drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                     drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
@@ -126,7 +126,7 @@
         }
         
         .sponsor-logo[alt="Pabst Blue Ribbon"]:hover {
-            filter: grayscale(100%) brightness(1.25) 
+            filter: grayscale(100%) brightness(0.4) contrast(1.5) 
                     drop-shadow(0 0 10px rgba(255, 255, 255, 0.8))
                     drop-shadow(0 0 16px rgba(255, 255, 255, 0.6))
                     drop-shadow(0 0 24px rgba(255, 255, 255, 0.4))
@@ -167,7 +167,7 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 100px;
-                filter: grayscale(100%) brightness(1.15) 
+                filter: grayscale(100%) brightness(0.3) contrast(1.5) 
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
@@ -219,7 +219,7 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 85px;
-                filter: grayscale(100%) brightness(1.15) 
+                filter: grayscale(100%) brightness(0.3) contrast(1.5) 
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
@@ -285,7 +285,7 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 80px;
-                filter: grayscale(100%) brightness(1.15) 
+                filter: grayscale(100%) brightness(0.3) contrast(1.5) 
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
@@ -322,7 +322,7 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 70px;
-                filter: grayscale(100%) brightness(1.15) 
+                filter: grayscale(100%) brightness(0.3) contrast(1.5) 
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
