--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
 
         .sponsor-logo[alt="Pabst Blue Ribbon"] {
             max-height: 120px;
+            filter: invert(1) brightness(0) contrast(1.2) 
+                    drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
+        }
+        
+        .sponsor-logo[alt="Pabst Blue Ribbon"]:hover {
+            filter: invert(1) brightness(0) contrast(1.3) 
+                    drop-shadow(0 0 10px rgba(255, 255, 255, 0.8))
+                    drop-shadow(0 0 16px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 24px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9)) !important;
         }
 
         .sponsor-logo[alt="HOKA"] {
@@ -154,6 +167,11 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 100px;
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -201,6 +219,11 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 85px;
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -262,6 +285,11 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 80px;
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -294,6 +322,11 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 70px;
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
             }
 
             .sponsor-logo[alt="HOKA"] {
