--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
                         drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             }
+            
+            .sponsor-logo[alt="Pabst Blue Ribbon"]:hover {
+                transform: none;
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+            }
         }
 
         /* Individual logo sizing adjustments */
@@ -122,15 +131,18 @@
                     drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                     drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                     drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
+                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+            opacity: 0.95;
         }
         
         .sponsor-logo[alt="Pabst Blue Ribbon"]:hover {
+            opacity: 1;
+            transform: translateY(-3px) scale(1.1);
             filter: invert(1) brightness(0) contrast(1.3) 
                     drop-shadow(0 0 10px rgba(255, 255, 255, 0.8))
                     drop-shadow(0 0 16px rgba(255, 255, 255, 0.6))
                     drop-shadow(0 0 24px rgba(255, 255, 255, 0.4))
-                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9)) !important;
+                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9));
         }
 
         .sponsor-logo[alt="HOKA"] {
@@ -171,7 +183,7 @@
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -223,7 +235,7 @@
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -289,7 +301,7 @@
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -326,7 +338,7 @@
                         drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                         drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                         drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             }
 
             .sponsor-logo[alt="HOKA"] {
