--- a/index.html
+++ b/index.html
@@ -360,6 +360,40 @@
             }
         }
 
+        /* Nocturnal Logo - Top Center */
+        .nocturnal-logo-container {
+            position: fixed;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 100;
+            padding: 30px 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .nocturnal-logo {
+            max-height: 120px;
+            width: auto;
+            filter: brightness(0) 
+                    drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+            opacity: 0.95;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .nocturnal-logo:hover {
+            opacity: 1;
+            filter: brightness(0) 
+                    drop-shadow(0 0 10px rgba(255, 255, 255, 0.8))
+                    drop-shadow(0 0 16px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 24px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9));
+        }
+
         /* Get Tickets Button */
         .tickets-button-container {
             position: fixed;
@@ -430,6 +464,14 @@
                 height: 100%;
             }
 
+            .nocturnal-logo {
+                max-height: 80px;
+            }
+
+            .nocturnal-logo-container {
+                padding: 20px 0;
+            }
+
             .tickets-button {
                 padding: 16px 35px;
                 font-size: 18px;
@@ -442,6 +484,14 @@
         }
 
         @media (max-width: 480px) {
+            .nocturnal-logo {
+                max-height: 60px;
+            }
+
+            .nocturnal-logo-container {
+                padding: 15px 0;
+            }
+
             .tickets-button {
                 padding: 14px 28px;
                 font-size: 16px;
@@ -461,6 +511,14 @@
         }
 
         @media (max-width: 360px) {
+            .nocturnal-logo {
+                max-height: 50px;
+            }
+
+            .nocturnal-logo-container {
+                padding: 12px 0;
+            }
+
             .tickets-button {
                 padding: 12px 24px;
                 font-size: 15px;
@@ -479,6 +537,16 @@
             <source src="final-urcm2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+    </div>
+
+    <!-- Nocturnal Logo - Top Center -->
+    <div class="nocturnal-logo-container">
+        <img src="Noc_sticker-03.png" alt="Nocturnal" class="nocturnal-logo">
+    </div>
+
+    <!-- Nocturnal Logo - Top Center -->
+    <div class="nocturnal-logo-container">
+        <img src="Noc_sticker-03.png" alt="Nocturnal" class="nocturnal-logo">
     </div>
 
     <!-- Get Tickets Button -->
