Complete HOKA logo size increase - all desktop breakpoints updated

--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
         
-        /* HOKA logo - matches other logos */
+        /* HOKA logo - bigger on desktop */
         .sponsor-logo[alt="HOKA"] {
-            max-width: 400px !important;
+            max-width: 500px !important;
             width: auto !important;
-            min-width: 80px !important;
+            min-width: 100px !important;
         }
         
         /* Scale logos down on smaller desktop windows */
