Complete mobile HOKA fix - all breakpoints match other logos

--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
             }
 
             .sponsor-logo[alt="HOKA"] {
-                max-height: 28px;
+                max-height: 85px !important;
+                max-width: 100% !important;
             }
         }
 
