--- a/admin.html
+++ b/admin.html
@@ -454,7 +454,7 @@
                         <div class="runner-info">
                             <div class="name-edit-container">
                                 <div class="runner-name">${team.name}</div>
-                                <button class="edit-btn" onclick="editName('teams', '${team.id}', ${JSON.stringify(team.name)})" title="Edit name">✏️</button>
+                                <button class="edit-btn" data-category="teams" data-id="${team.id}" data-name="${team.name.replace(/"/g, '&quot;')}" title="Edit name">✏️</button>
                             </div>
                             <div class="runner-stats">${distance}km completed</div>
                         </div>
@@ -468,6 +468,16 @@
                     </div>
                 `;
             }).join('');
+            
+            // Add event listeners for edit buttons
+            teamsList.querySelectorAll('.edit-btn').forEach(btn => {
+                btn.addEventListener('click', function() {
+                    const category = this.getAttribute('data-category');
+                    const id = this.getAttribute('data-id');
+                    const currentName = this.getAttribute('data-name');
+                    editName(category, id, currentName);
+                });
+            });
         }
 
         function renderSolo(solo) {
@@ -484,7 +494,7 @@
                         <div class="runner-info">
                             <div class="name-edit-container">
                                 <div class="runner-name">${runner.name}</div>
-                                <button class="edit-btn" onclick="editName('solo', '${runner.id}', ${JSON.stringify(runner.name)})" title="Edit name">✏️</button>
+                                <button class="edit-btn" data-category="solo" data-id="${runner.id}" data-name="${runner.name.replace(/"/g, '&quot;')}" title="Edit name">✏️</button>
                             </div>
                             <div class="runner-stats">${distance}km completed</div>
                         </div>
@@ -498,6 +508,16 @@
                     </div>
                 `;
             }).join('');
+            
+            // Add event listeners for edit buttons
+            soloList.querySelectorAll('.edit-btn').forEach(btn => {
+                btn.addEventListener('click', function() {
+                    const category = this.getAttribute('data-category');
+                    const id = this.getAttribute('data-id');
+                    const currentName = this.getAttribute('data-name');
+                    editName(category, id, currentName);
+                });
+            });
         }
 
         // Add a lap
@@ -518,8 +538,10 @@
 
         // Edit name
         function editName(category, runnerId, currentName) {
-            const newName = prompt(`Edit ${category === 'teams' ? 'Team' : 'Runner'} name:`, currentName);
-            if (newName && newName.trim() !== '' && newName !== currentName) {
+            // Decode HTML entities if needed
+            const decodedName = currentName.replace(/&quot;/g, '"');
+            const newName = prompt(`Edit ${category === 'teams' ? 'Team' : 'Runner'} name:`, decodedName);
+            if (newName && newName.trim() !== '' && newName !== decodedName) {
                 const ref = database.ref(`${category}/${runnerId}/name`);
                 ref.set(newName.trim()).then(() => {
                     console.log('Name updated successfully');
