Fix Runner Guide PDF link - properly encode parentheses in URL

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
     <div class="tickets-button-container">
         <a href="https://simpli.events/e/NOC100" target="_blank" class="tickets-button">Get Tickets</a>
         <a href="leaderboard.html" class="leaderboard-button">Leaderboard</a>
-        <a href="RUNNERS%20GUIDE%20(2026).pdf" target="_blank" class="runner-guide-button">Runner Guide</a>
+        <a href="RUNNERS%20GUIDE%20%282026%29.pdf" target="_blank" class="runner-guide-button">Runner Guide</a>
     </div>
 
     <!-- Sponsors Section -->
