--- a/index.html
+++ b/index.html
@@ -601,11 +601,11 @@
 
         .tickets-button {
             display: inline-block;
-            padding: 18px 45px;
+            padding: 12px 30px;
             background: rgba(255, 255, 255, 0.95);
             color: #000;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 16px;
             font-weight: 600;
             letter-spacing: 0.5px;
             border-radius: 8px;
@@ -639,11 +639,11 @@
         .leaderboard-button,
         .runner-guide-button {
             display: inline-block;
-            padding: 18px 45px;
+            padding: 12px 30px;
             background: rgba(255, 255, 255, 0.95);
             color: #000;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 16px;
             font-weight: 600;
             letter-spacing: 0.5px;
             border-radius: 8px;
@@ -693,8 +693,8 @@
             .tickets-button,
             .leaderboard-button,
             .runner-guide-button {
-                padding: 16px 35px;
-                font-size: 18px;
+                padding: 11px 26px;
+                font-size: 15px;
             }
 
             .tickets-button-container {
@@ -716,8 +716,8 @@
             .tickets-button,
             .leaderboard-button,
             .runner-guide-button {
-                padding: 14px 28px;
-                font-size: 16px;
+                padding: 10px 22px;
+                font-size: 14px;
                 pointer-events: auto;
                 touch-action: manipulation;
             }
@@ -745,9 +745,11 @@
                 padding: 12px 0;
             }
 
-            .tickets-button {
-                padding: 12px 24px;
-                font-size: 15px;
+            .tickets-button,
+            .leaderboard-button,
+            .runner-guide-button {
+                padding: 9px 20px;
+                font-size: 13px;
             }
 
             .tickets-button-container {
