Center buttons on mobile and desktop

--- a/index.html
+++ b/index.html
@@ -698,7 +698,9 @@
             }
 
             .tickets-button-container {
-                top: 42%;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
                 z-index: 100;
                 gap: 12px;
             }
@@ -723,7 +725,9 @@
             }
 
             .tickets-button-container {
-                top: 35%;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
                 z-index: 100;
                 pointer-events: none;
                 gap: 10px;
@@ -753,7 +757,9 @@
             }
 
             .tickets-button-container {
-                top: 32%;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
                 z-index: 100;
             }
         }
