Move sponsor logos to top of leaderboard page

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -228,7 +228,8 @@
 
         /* Sponsors Section */
         .sponsors-section {
-            margin-top: 50px;
+            margin-top: 0;
+            margin-bottom: 40px;
             padding: 40px 20px;
             display: flex;
             flex-wrap: wrap;
@@ -368,6 +369,25 @@
         <h1>URCM Live Leaderboard</h1>
         <div class="last-update" id="lastUpdate">Loading...</div>
 
+        <!-- Sponsors Section -->
+        <div class="sponsors-section">
+            <div class="sponsor-item">
+                <img src="sponsors/maurten.png" alt="Maurten" class="sponsor-logo">
+            </div>
+            <div class="sponsor-item">
+                <img src="sponsors/ciele athletics.png" alt="Ciele Athletics" class="sponsor-logo">
+            </div>
+            <div class="sponsor-item">
+                <img src="sponsors/fenix.webp" alt="Fenix" class="sponsor-logo">
+            </div>
+            <div class="sponsor-item">
+                <img src="sponsors/Pabst Blue Ribbon.png" alt="Pabst Blue Ribbon" class="sponsor-logo">
+            </div>
+            <div class="sponsor-item">
+                <img src="sponsors/HOKA.png" alt="HOKA" class="sponsor-logo">
+            </div>
+        </div>
+
         <div class="loading" id="loading">
             <div class="spinner"></div>
             Connecting to live data...
@@ -400,25 +420,6 @@
                     </div>
                     <div id="solo-list"></div>
                 </div>
-            </div>
-        </div>
-
-        <!-- Sponsors Section -->
-        <div class="sponsors-section">
-            <div class="sponsor-item">
-                <img src="sponsors/maurten.png" alt="Maurten" class="sponsor-logo">
-            </div>
-            <div class="sponsor-item">
-                <img src="sponsors/ciele athletics.png" alt="Ciele Athletics" class="sponsor-logo">
-            </div>
-            <div class="sponsor-item">
-                <img src="sponsors/fenix.webp" alt="Fenix" class="sponsor-logo">
-            </div>
-            <div class="sponsor-item">
-                <img src="sponsors/Pabst Blue Ribbon.png" alt="Pabst Blue Ribbon" class="sponsor-logo">
-            </div>
-            <div class="sponsor-item">
-                <img src="sponsors/HOKA.png" alt="HOKA" class="sponsor-logo">
             </div>
         </div>
     </div>
