--- a/leaderboard.html
+++ b/leaderboard.html
@@ -287,6 +287,19 @@
 
         .sponsor-logo[alt="Pabst Blue Ribbon"] {
             max-height: 90px;
+            filter: invert(1) brightness(0) contrast(1.2) 
+                    drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+        }
+        
+        .sponsor-logo[alt="Pabst Blue Ribbon"]:hover {
+            filter: invert(1) brightness(0) contrast(1.3) 
+                    drop-shadow(0 0 10px rgba(255, 255, 255, 0.8))
+                    drop-shadow(0 0 16px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 24px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9));
         }
 
         .sponsor-logo[alt="HOKA"] {
@@ -318,6 +331,11 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 65px;
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -356,6 +374,11 @@
 
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 55px;
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             }
 
             .sponsor-logo[alt="HOKA"] {
